--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/tkswann2/sqlite101#readme",
   "dependencies": {
+    "cli-table2": "^0.2.0",
     "sqlite3": "^3.1.6"
   }
 }
